// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currencies should render correctly for type "africa" 1`] = `
<ForwardRef
  contentContainerStyle={
    [
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingTop": 8,
      },
      {},
    ]
  }
>
  <RadioButtons
    items={
      [
        {
          "display": "US dollar",
          "value": "USD",
        },
        {
          "display": "West African CFA franc",
          "value": "XOF",
        },
        {
          "display": "Naira",
          "value": "NGN",
        },
        {
          "display": "Congolese franc",
          "value": "CDF",
        },
      ]
    }
    onButtonPress={[MockFunction]}
    selectedValue="EUR"
  />
</ForwardRef>
`;

exports[`Currencies should render correctly for type "europe" 1`] = `
<ForwardRef
  contentContainerStyle={
    [
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingTop": 8,
      },
      {},
    ]
  }
>
  <RadioButtons
    items={
      [
        {
          "display": "Euro",
          "value": "EUR",
        },
        {
          "display": "Swiss franc",
          "value": "CHF",
        },
        {
          "display": "British pound",
          "value": "GBP",
        },
        {
          "display": "Swedish krona",
          "value": "SEK",
        },
        {
          "display": "Danish kroner",
          "value": "DKK",
        },
        {
          "display": "Bulgarian lev",
          "value": "BGN",
        },
        {
          "display": "Czech koruna",
          "value": "CZK",
        },
        {
          "display": "Hungarian forint",
          "value": "HUF",
        },
        {
          "display": "Polish złoty",
          "value": "PLN",
        },
        {
          "display": "Romanian leu",
          "value": "RON",
        },
        {
          "display": "Icelandic króna",
          "value": "ISK",
        },
        {
          "display": "Norwegian krone",
          "value": "NOK",
        },
        {
          "display": "Turkish lira",
          "value": "TRY",
        },
      ]
    }
    onButtonPress={[MockFunction]}
    selectedValue="EUR"
  />
</ForwardRef>
`;

exports[`Currencies should render correctly for type "latinAmerica" 1`] = `
<ForwardRef
  contentContainerStyle={
    [
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingTop": 8,
      },
      {},
    ]
  }
>
  <RadioButtons
    items={
      [
        {
          "display": "Argentine peso",
          "value": "ARS",
        },
        {
          "display": "Colombian Peso",
          "value": "COP",
        },
        {
          "display": "Peruvian sol",
          "value": "PEN",
        },
        {
          "display": "Mexican peso",
          "value": "MXN",
        },
        {
          "display": "Chilean peso",
          "value": "CLP",
        },
        {
          "display": "Peruvian sol",
          "value": "PEN",
        },
        {
          "display": "Colombian Peso",
          "value": "COP",
        },
        {
          "display": "Costa Rican Colón",
          "value": "CRC",
        },
        {
          "display": "Brazilian real",
          "value": "BRL",
        },
      ]
    }
    onButtonPress={[MockFunction]}
    selectedValue="EUR"
  />
</ForwardRef>
`;

exports[`Currencies should render correctly for type "other" 1`] = `
<ForwardRef
  contentContainerStyle={
    [
      {
        "flexGrow": 1,
        "justifyContent": "center",
        "paddingBottom": 8,
        "paddingTop": 8,
      },
      {},
    ]
  }
>
  <RadioButtons
    items={
      [
        {
          "display": "LNURL BTC swap",
          "value": "SAT",
        },
        {
          "display": "L-USDT",
          "value": "USDT",
        },
      ]
    }
    onButtonPress={[MockFunction]}
    selectedValue="EUR"
  />
</ForwardRef>
`;
